# Docs

./: README.md
BackEnd/: ToDo.md
Code/stock/: Main.ipynb
Coding Challenges/: Arrays.md  CheatSheet.md  Data Structure (Basic Explanation).md  Greedy.md  Recursion-DP.md  Strings.md  ToDo.md  Trees-Tries-Graphs.md
Coding Patterns/: OOP.md  ToDo.md
FrontEnd/: ToDo.md
Infrastructure/: PracticeQuestion.md  SystemDesign.md  ToDo.md
Interview Framework/: Behavioural  Questions.md  README.md
Interview Questions/Interview Assignments/nubank/CapitalGains/: Dockerfile  README.md  main.py  pyproject.toml
Interview Questions/Interview Assignments/nubank/CapitalGains/app_svc/: __init__.py  tax_calculation.py
Interview Questions/Interview Assignments/nubank/CapitalGains/domain/: __init__.py  models.py
Interview Questions/Interview Assignments/nubank/CapitalGains/repos/: data.txt
Interview Questions/Interview Assignments/nubank/CapitalGains/tests/integration_test/: test_tax_calcultion_integration.py
Interview Questions/Interview Assignments/nubank/CapitalGains/tests/unitTest/appSvc/: test_tax_calculation.py
Interview Questions/Interview Assignments/nubank/CapitalGains/utils/: __init__.py  constants.py
Investment/: README.md
Learning Tech Framework/: README.md
Life Framework/: README.md
Machine Learning/: README.md
Resume/: Senior Sid Khanna - Resume.docx  Sid Khanna - Resume.docx
Resume/Old Resumes/: README.md  (+12 more)
xArchive/: Behavioural.md  CheatSheet.md  Meta  PracticeQuestion.md  Random.md  Shopify.md  SystemDeisgn.md  randomEaby.md
(+89 files in other folders)
